--- a/zip-code/public/styles/main.css
+++ b/zip-code/public/styles/main.css
@@ -1,12 +1,12 @@
 body {
-    background: #BBAADD;
+    background: #9999EE;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 * {
-    color:#660099;
+    color:#2222BB;
 }
 
 button {
